@@ -1,0 +1,3 @@
+*.pm linguist-language=Perl
+*.t linguist-language=Perl
+*.h linguist-language=C
