@@ -1,4 +1,3 @@
-*~
-#*#
-.build
-Alien-LibYAML*
+/Alien-LibYAML-*
+/.build
+*.swp
