@@ -1,0 +1,28 @@
+language: perl
+sudo: false
+
+install:
+  - perlbrew list
+  - cpanm -n Dist::Zilla App::af FFI::Platypus
+  - af missing | cpanm
+  - dzil authordeps --missing | cpanm -n
+  - dzil listdeps --missing   | cpanm -n
+
+perl:
+  - "5.14"
+  - "5.16"
+  - "5.18"
+  - "5.20"
+  - "5.22"
+  - "5.24"
+  - "5.26"
+
+script:
+  - dzil test -v
+
+env:
+  global:
+    - PERL_USE_UNSAFE_INC=0
+  matrix:
+    - ALIEN_INSTALL_TYPE=share
+    - ALIEN_INSTALL_TYPE=system
