@@ -3,44 +3,48 @@ author  = Richard Simões <rsimoes AT cpan DOT org>
 author  = Graham Ollis <plicease@cpan.org>
 license = MIT
 copyright_holder = Richard Simões
-copyright_year   = 2017
+copyright_year   = 2013-2018
 
 version = 2.01
 
 [AlienBase::Doc]
 name = libyaml
 
-[@Basic]
+[@Author::Plicease]
+:version      = 2.26
+travis_status = 1
+release_tests = 1
+irc           = irc://irc.perl.org/#native
+github_user   = Perl5-Alien
+test2_v0      = 1
+
+diag_preamble = | $post_diag = sub {
+diag_preamble = |   require Alien::LibYAML;
+diag_preamble = |   diag "version        = ", Alien::LibYAML->config('version');
+diag_preamble = |   diag "cflags         = ", Alien::LibYAML->cflags;
+diag_preamble = |   diag "cflags_static  = ", Alien::LibYAML->cflags_static;
+diag_preamble = |   diag "libs           = ", Alien::LibYAML->libs;
+diag_preamble = |   diag "libs_static    = ", Alien::LibYAML->libs_static;
+diag_preamble = |   diag "dynamic_libs   = $_" for Alien::LibYAML->dynamic_libs;
+diag_preamble = | };
+
+
 [AlienBuild]
-[PodWeaver]
 
-[NextRelease]
+[RemovePrereqs]
+remove = strict
+remove = warnings
+remove = base
 
-[AutoMetaResources]
-homepage          = https://metacpan.org/release/%{dist}
-repository.github = user:rsimoes
-bugtracker.github = user:rsimoes
+[Prereqs / ConfigureRequires]
+Alien::Build        = 0.67
 
-[AutoPrereqs]
-skip = ^(?:base|strict|warnings|if|utf8|charnames|open|parent|re|subs|version|Carp)$
+[Prereqs]
+Alien::Base         = 0.67
 
-[Test::PodSpelling]
-stopwords = Kirill
-stopwords = Simonov
-stopwords = libyaml
-stopwords = Ollis
+[Author::Plicease::Upload]
+cpan = 1
 
-[CheckChangesHasContent]
-
-[Clean]
-
-[ExtraTests]
-
-[MinimumPerl]
-
-[OurPkgVersion]
-
-[MetaResources]
-x_IRC = irc://irc.perl.org/#native
-
-[MetaJSON]
+[Author::Plicease::Thanks]
+current  = Graham Ollis <plicease@cpan.org>
+original = Richard Simões (RSIMOES)
