@@ -1,22 +1,95 @@
-use strict;
-use warnings;
-use Test::More;
-use Alien::LibYAML;
+use Test2::V0 -no_srand => 1;
+use Config;
 
-ok 1;
+eval q{ require Test::More };
 
-diag '';
-diag '';
-diag '';
+# This .t file is generated.
+# make changes instead to dist.ini
 
-diag "type           = ", Alien::LibYAML->install_type;
-diag "version        = ", Alien::LibYAML->version;
-diag "cflags         = ", Alien::LibYAML->cflags;
-diag "cflags_static  = ", Alien::LibYAML->cflags_static;
-diag "libs           = ", Alien::LibYAML->libs;
-diag "libs_static    = ", Alien::LibYAML->libs_static;
+my %modules;
+my $post_diag;
 
-diag '';
-diag '';
+$modules{$_} = $_ for qw(
+  Alien::Base
+  Alien::Build
+  Alien::Build::MM
+  ExtUtils::MakeMaker
+  Test2::V0
+  Test::Alien
+);
+
+$post_diag = sub {
+  require Alien::LibYAML;
+  diag "version        = ", Alien::LibYAML->config('version');
+  diag "cflags         = ", Alien::LibYAML->cflags;
+  diag "cflags_static  = ", Alien::LibYAML->cflags_static;
+  diag "libs           = ", Alien::LibYAML->libs;
+  diag "libs_static    = ", Alien::LibYAML->libs_static;
+  diag "dynamic_libs   = $_" for Alien::LibYAML->dynamic_libs;
+};
+
+my @modules = sort keys %modules;
+
+sub spacer ()
+{
+  diag '';
+  diag '';
+  diag '';
+}
+
+pass 'okay';
+
+my $max = 1;
+$max = $_ > $max ? $_ : $max for map { length $_ } @modules;
+our $format = "%-${max}s %s"; 
+
+spacer;
+
+my @keys = sort grep /(MOJO|PERL|\A(LC|HARNESS)_|\A(SHELL|LANG)\Z)/i, keys %ENV;
+
+if(@keys > 0)
+{
+  diag "$_=$ENV{$_}" for @keys;
+  
+  if($ENV{PERL5LIB})
+  {
+    spacer;
+    diag "PERL5LIB path";
+    diag $_ for split $Config{path_sep}, $ENV{PERL5LIB};
+    
+  }
+  elsif($ENV{PERLLIB})
+  {
+    spacer;
+    diag "PERLLIB path";
+    diag $_ for split $Config{path_sep}, $ENV{PERLLIB};
+  }
+  
+  spacer;
+}
+
+diag sprintf $format, 'perl ', $];
+
+foreach my $module (sort @modules)
+{
+  if(eval qq{ require $module; 1 })
+  {
+    my $ver = eval qq{ \$$module\::VERSION };
+    $ver = 'undef' unless defined $ver;
+    diag sprintf $format, $module, $ver;
+  }
+  else
+  {
+    diag sprintf $format, $module, '-';
+  }
+}
+
+if($post_diag)
+{
+  spacer;
+  $post_diag->();
+}
+
+spacer;
 
 done_testing;
