@@ -1,6 +1,4 @@
-use strict;
-use warnings;
-use Test2::Bundle::Extended;
+use Test2::V0 -no_srand => 1;
 use Test::Alien;
 use Alien::LibYAML;
 
